======================================
Changes for Crate Data Admin Interface
======================================

Unreleased
==========

2014/06/06 0.8.2
================

 - fix: make table list and node list available in mobile view

2014/06/04 0.8.1
================

 - fix: round percentage of available and underreplicated data correctly

2014/06/04 0.8.0
================

 - make table that displays table partitions horizontally scrollable

 - display developer news notifications

2014/05/19 0.7.3
================

 - fix: prevent selected node/table item from being out of viewport

2014/05/15 0.7.2
================

 - improved handling of error responses from server

2014/05/08 0.7.1
================

 - changed doc url to match doc url pattern

2014/05/08 0.7.0
================

 - removed docs menu item from sidebar and added link to external docs in statusbar

 - make console history persistent by default

 - display crate version of each node and show warning if cluster contains multiple versions

 - display heap size instead of system memory in node detail view

2014/04/29 0.6.3
================

 - fix: make sure twitter import stops when user navigates away from tutorial view

 - fix: allow horizontal scrolling in console result table

2014/04/28 0.6.2
================

 - fixed broken redirect after twitter authentication in 'get started' section

2014/04/16 0.6.1
================

 - force vertical scrollbar to prevent content column from flickering

2014/04/16 0.6.0
================

 - support for partitioned tables

 - make node list sortable by health and name

 - display number of nodes in status bar

 - show node version number

 - added history support in admin console

2014/04/30 0.5.3
================

 - fix: make sure twitter import stops when user navigates away from tutorial view

 - fixed broken redirect after twitter authentication in 'get started' section

2014/04/14 0.5.2
================
